--- a/Experimentos/fabricante/Pipfile
+++ b/Experimentos/fabricante/Pipfile
@@ -14,6 +14,9 @@ marshmallow-sqlalchemy = "*"
 faker = "*"
 requests = "*"
 flask-cors = "*"
+waitress = "*"
+pg8000 = "*"
+python-dotenv = "*"
 
 [dev-packages]
 
