--- a/Frontend/cliente-web/package.json
+++ b/Frontend/cliente-web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.8.1",
+    "csv-parser": "^3.2.0",
     "firebase": "^11.4.0",
     "next": "15.2.0",
     "react": "^19.0.0",
@@ -18,10 +19,11 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^20.17.24",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "uuid": "^11.1.0"
   }
 }
