--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,6 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+/Experimento/node_modules/playwright-core
+/Experimento/node_modules/playwright
+/Experimento/node_modules/.bin
